fix jumping scrollbar

--- a/src/components/PhaseMain/SpiritBoards/style.module.scss
+++ b/src/components/PhaseMain/SpiritBoards/style.module.scss
@@ -7,7 +7,7 @@
     height: 100%;
     width: 100%;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
     background-color: lighten($c-brown, 10%);
     border-right: solid darken($c-brown, 10%);
     scrollbar-color: lighten($c-brown, 20%) darken($c-brown, 20%);
@@ -72,7 +72,7 @@
     width: 33%;
     position: relative;
   }
-  
+
   &__handCardButtonOverlay {
     position: absolute;
     left: 0px;
